Chose code theme, removed old code CSS. Fixed some poor contrast

--- a/src/styles/includes/base.scss
+++ b/src/styles/includes/base.scss
@@ -141,18 +141,11 @@ h3 code {
 a {
   color: $brand-color;
   text-decoration: none;
-  // box-shadow: inset 0 -4px 0 lighten($brand-color, 25%);
-  // border-bottom: 1px solid lighten($brand-color, 25%);
-}
-a:visited {
-  // color: darken($brand-color, 15%);
 }
 a:hover,
 a:focus {
   color: lighten($brand-color, 15%);
-  // text-decoration: underline;
   border-bottom: 2px solid lighten($brand-color, 15%);
-  // box-shadow: inset 0 -4px 0 lighten($brand-color, 25%);
 }
 
 /**
@@ -187,6 +180,9 @@ code {
   padding: 1px 5px;
   background: #ddd;
   border-radius: $border-radius;
+}
+a code {
+  color: #C70000;
 }
 
 pre {
