--- a/src/styles/includes/social.scss
+++ b/src/styles/includes/social.scss
@@ -80,9 +80,9 @@
   border-color: #9146FF;
 }
 .social .mastodon {
-  color: #6364FF;
-  fill: #6364FF;
+  color: #5C5CFF;
+  fill: #5C5CFF;
 }
 .social .mastodon:hover {
-  border-color: #6364FF;
+  border-color: #5C5CFF;
 }
